--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.2"
   }
 }
